# RiveQmlExamples

./: .gitignore  CMakeLists.txt  README.md
animated-icons/: Main.qml  main.cpp
brightness-control/: Main.qml  main.cpp
brightness-control/assets/: brightnessControl.riv
